changement de qlq éléments ds tt les pages + css

--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,11 @@
         <section class="suggest">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
                     alt="pub pour un vol en avion gratuit"></a>
-
         </section>
-        <article>
+        <article class="article-contact">
+            <section>
+                <h1>Vous souhaitez nous contacter ?</h1>
+            </section>
             <form>
                 <input type="text" required placeholder="Nom">
 
@@ -39,7 +41,6 @@
 
                 <input type="email" required placeholder="E-mail">
 
-                <!-- <input type="texte" required placeholder="Votre demande ?"> -->
                 <select name>
                     <option selected>Votre demande ?</option>
                     <option>Devis</option>
