--- a/offers_deals.html
+++ b/offers_deals.html
@@ -29,12 +29,12 @@
     <main>
         <section class="suggest">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
-                    alt="pub pour un vol en avion gratuit"></a>
+                    <!-- alt="pub pour un vol en avion gratuit"></a> -->
 
         </section>
         <article class="article-offer">
             <div class="titre-offer">
-                <h1>Découvrez nos plus beaux voyages</h1>
+                <h1 class="text-center">Découvrez nos plus beaux voyages</h1>
             </div>
 
             <section class="section-voyages">
@@ -53,19 +53,6 @@
                 </div>
 
                 <div class="voyages-card">
-                    <img src="medias/japon.jpg" alt="Photo du Mont-Fuji">
-                    <hr class="separateur">
-                    <h2>Japon | Mont Fuji</h2>
-                    <ul>
-                        <li>Vue imprenable sur le Mont Fuji</li>
-                        <li>Découverte des onsen traditionnels</li>
-                        <li>visite de temples et sanctuaires</li>
-                        <li>Expérience culinaire japonaise</li>
-                    </ul>
-                    <a href="contact.html" target="_blank" class="CTA border">A partir de 1890€</a>
-                </div>
-
-                <div class="voyages-card">
                     <img src="medias/sahara.jpg" alt="Photo d'une dune dans le désert du Sahara">
                     <hr class="separateur">
                     <h2>Maroc | Désert du Sahara</h2>
@@ -78,6 +65,21 @@
                     <a href="contact.html" target="_blank" class="CTA border">A partir de 980€</a>
 
                 </div>
+
+                <div class="voyages-card">
+                    <img src="medias/japon.jpg" alt="Photo du Mont-Fuji">
+                    <hr class="separateur">
+                    <h2>Japon | Mont Fuji</h2>
+                    <ul>
+                        <li>Vue imprenable sur le Mont Fuji</li>
+                        <li>Découverte des onsen traditionnels</li>
+                        <li>visite de temples et sanctuaires</li>
+                        <li>Expérience culinaire japonaise</li>
+                    </ul>
+                    <a href="contact.html" target="_blank" class="CTA border">A partir de 1890€</a>
+                </div>
+
+                
 
             </section>
         </article>
