finalisation (normalement) du resonsive du site (pour téléphone)

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         </section>
         <article class="article-accueil">
-            <h1>Votre aventure commence ici avec Nomadia.</h1>
-            <h2>Des séjours pour découvrir le monde autrement.</h2>
+            <h1 class="text-center">Votre aventure commence ici avec Nomadia.</h1>
+            <h2 class="text-center">Des séjours pour découvrir le monde autrement.</h2>
             <a href="why.html" class="CTA-accueil">Qu'attendez vous ?</a>
         </article>
     </main>
