--- a/why.html
+++ b/why.html
@@ -36,8 +36,8 @@
 
         <article class="article-why">
 
-            <h1>Pourquoi voyager avec Nomadia ?</h1>
-            <h2>Bien plus qu'un simple séjour : une invitation à vivre le monde autrement.</h2>
+            <h1 class="text-center">Pourquoi voyager avec Nomadia ?</h1>
+            <h2 class="text-center">Bien plus qu'un simple séjour : une invitation à vivre le monde autrement.</h2>
 
             <section class="section-why1">
                 <img src="medias/plage.jpg" alt="Image d'un hamac sur une plage">
