--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         </section>
         <article class="article-contact">
             <section>
-                <h1>Vous souhaitez nous contacter ?</h1>
+                <h1 class="text-center">Vous souhaitez nous contacter ?</h1>
             </section>
             <form>
                 <input type="text" required placeholder="Nom">
