fichiers validés sur W3C validator

--- a/about.html
+++ b/about.html
@@ -28,11 +28,10 @@
         </nav>
     </header>
     <main>
-        <section class="suggest">
+        <div class="suggest">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
                     alt="pub pour un vol en avion gratuit"></a>
-
-        </section>
+        </div>
         <article class="article-about">
             <img src="medias/team.jpg" alt="Image de l'équipe de Nomadia">
             <h1>A propos de Nomadia</h1>
