--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
@@ -14,7 +17,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="medias/logo-transparent-png.png"></img></a>
+        <a href="index.html"><img src="medias/logo-transparent-png.png" alt="Logo de Nomadia"></a>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="why.html">Nos voyages</a>
@@ -24,10 +27,10 @@
         </nav>
     </header>
     <main>
-        <section class="suggest">
+        <div class="suggest">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
                     alt="pub pour un vol en avion gratuit"></a>
-        </section>
+        </div>
         <article class="article-contact">
             <section>
                 <h1 class="text-center">Vous souhaitez nous contacter ?</h1>
@@ -71,3 +74,5 @@
         </div>
     </footer>
 </body>
+
+</html>
