--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     </header>
 
     <main>
-        <section class="suggest">
 
+        <div class="suggest">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
-                    alt="Pub pour un vol en avion gratuit"></a>
+                    alt="pub pour un vol en avion gratuit"></a>
+        </div>
 
-        </section>
         <article class="article-accueil">
             <h1 class="text-center">Votre aventure commence ici avec Nomadia.</h1>
             <h2 class="text-center">Des séjours pour découvrir le monde autrement.</h2>
