--- a/offers_deals.html
+++ b/offers_deals.html
@@ -27,11 +27,12 @@
         </nav>
     </header>
     <main>
-        <section class="suggest">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
-                    <!-- alt="pub pour un vol en avion gratuit"></a> -->
 
-        </section>
+        <div class="suggest">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
+                    alt="pub pour un vol en avion gratuit"></a>
+        </div>
+
         <article class="article-offer">
             <div class="titre-offer">
                 <h1 class="text-center">Découvrez nos plus beaux voyages</h1>
@@ -79,7 +80,7 @@
                     <a href="contact.html" target="_blank" class="CTA border">A partir de 1890€</a>
                 </div>
 
-                
+
 
             </section>
         </article>
