--- a/why.html
+++ b/why.html
@@ -27,39 +27,38 @@
         </nav>
     </header>
     <main>
-        <section class="suggest">
+
+        <div class="suggest">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="medias/faussepuub.png"
-                    alt="Pub pour un vol en avion gratuit"></a>
-
-        </section>
-
+                    alt="pub pour un vol en avion gratuit"></a>
+        </div>
 
         <article class="article-why">
 
             <h1 class="text-center">Pourquoi voyager avec Nomadia ?</h1>
             <h2 class="text-center">Bien plus qu'un simple séjour : une invitation à vivre le monde autrement.</h2>
 
-            <section class="section-why1">
+            <div class="div-why1">
                 <img src="medias/plage.jpg" alt="Image d'un hamac sur une plage">
                 <p>Allongez-vous dans un hamac entre deux cocotiers, bercé par le vent et le bruit des vagues. Avec
                     Nomadia, chaque séjour est une paranthèse de sérénité, pensée pour vous déconnecter du quotidien.
                     Vous choisissez la destination, on s'occupe du reste. Vous êtes déjà ailleurs.</p>
-            </section>
+            </div>
 
-            <section class="section-why2">
+            <div class="div-why2">
                 <img src="medias/torii.jpg" alt="Image de torii menants à un sancturaire">
                 <p>Avancez entre les torii, guidé vers un temple millénaire. Nomadia vous emmène au coeur des cultures,
                     là ou l'authenticité vous attend. Chaque voyage est une immersion soigneusement conçue pour éveiller
                     vos sens. Plus qu'un séjour : une rencontre.</p>
 
-            </section>
+            </div>
 
-            <section class="section-why3">
+            <div class="div-why3">
                 <img src="medias/sahara.jpg" alt="image d'une dune dans le désert du Sahara">
                 <p>A l'heure ou le soleil embrase les dunes d'or, le désert s'illumine de teintes chaudes et
                     envoûtantes. Chaque pas sur le sable vous rapproche d'un ailleurs profond, apaisant. Avec Nomadia,
                     contemplez la beauté brute du Sahara dans un moment suspendu hors du temps.</p>
-            </section>
+            </div>
 
             <div class="divCTA"> <a href="offers_deals.html" class="CTA">Je veux voyager !</a></div>
         </article>
