fichiers TOUS validés sur W3C validator

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
                     alt="pub pour un vol en avion gratuit"></a>
         </div>
         <article class="article-contact">
-            <section>
+            <!-- <section> -->
                 <h1 class="text-center">Vous souhaitez nous contacter ?</h1>
-            </section>
+            <!-- </section> -->
             <form>
                 <input type="text" required placeholder="Nom">
 
@@ -44,14 +44,15 @@
 
                 <input type="email" required placeholder="E-mail">
 
-                <select name>
+                <select>
                     <option selected>Votre demande ?</option>
                     <option>Devis</option>
                     <option>Information</option>
+                </select>
+                <textarea required placeholder="Votre message..."></textarea>
+                <input type="submit" value="Envoyer" class="bouton">
 
-                    <textarea required placeholder="Votre message..."></textarea>
-
-                    <input type="submit" value="Envoyer" class="bouton">
+            </form>
         </article>
     </main>
     <footer>
@@ -60,7 +61,7 @@
             <p>Un problème ? Une question ? Contactez-nous !</p>
         </div>
         <div>
-            <img src="medias/logo-transparent-png.png">
+            <img src="medias/logo-transparent-png.png" alt="logo de Nomadia">
             <p><i class="fa-solid fa-copyright fa-1x"></i>Thomas Paradis | 2025</p>
         </div>
         <div>
