--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         <div>
             <a href="contact.html"><i class="fa-solid fa-envelope fa-2x couleur-icones"></i></a>
             <p>Un problème ? Une question ? Contactez-nous !</p>
+            <p>
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                        src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" />
+                </a>
+            </p>
         </div>
         <div>
             <img src="medias/logo-transparent-png.png" alt="Logo de Nomadia">
