j'avais écrit "witdh" et pas "width" dans le viewport

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A propos - Découvrez l'agence Nomadia</title>
     <meta name="description"
         content="Aprenez-en plus sur Nomadia : notre histoire, nos valeurs et notre équipe passionnée au service de votre projet de voyage.">
