--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Echangez avec notre équipe | Nomadia</title>
     <meta name="description"
         content="Contactez notre agence Nomadia pour toute demande de renseignement, devis personnalisé ou réservations.">
