--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOMADIA - Agence de voyages sur mesure</title>
     <meta name="description"
         content="Nomadia vous accompagne dans l'organisation de séjours sur mesure, en toute sérénité. Découvrez nos destinations phares et préparez votre prochaine aventure.">
