--- a/offers_deals.html
+++ b/offers_deals.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nos offres | Bons plans et séjours à prix dox | Nomadia</title>
     <meta name="description"
         content="Découvrez nos offres exclusives et bon plans pour voyager au mielleur prix sans compromis sur la qualité">
