--- a/why.html
+++ b/why.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pourquoi choisir Nomadia pour vos voyages ?</title>
     <meta name="description"
         content="Découvrez ce qui rend l'expérience Nomadia unique : des voyages pensés pour vous faire vivre pleinement chaque destination, entre détente et immersion culturelle">
